# voice

./: .env  .env.example  ARCHITECTURE.md  README.md  pyproject.toml
docs/: architecture.md  guide.md
src/voice_agent/: __init__.py  __main__.py  audio.py  cli.py  config.py  filesystem.py  graph.py  launcher.py  llm.py  llm_filesystem_agent.py  local_agent.py  prompts.py  session.py  state.py  tools.py
src/voice_agent_langgraph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_filesystem.py  test_graph.py
