[project]
name = "voice-agent-langgraph"
version = "0.1.0"
description = "A from-scratch LangGraph voice agent starter project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langchain-core>=0.3.0",
  "langchain-openai>=0.3.0",
  "langchain-ollama>=0.3.0",
  "langgraph>=0.2.0",
  "numpy>=1.26.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.1",
  "sounddevice>=0.5.1",
  "typer>=0.12.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
]
voice = [
  "faster-whisper>=1.1.0",
]

[project.scripts]
voice-agent = "voice_agent.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
